--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -4,16 +4,49 @@
 #
 #    pip-compile requirements_dev.in
 #
+contourpy==1.0.7
+    # via matplotlib
+cycler==0.11.0
+    # via matplotlib
+fonttools==4.38.0
+    # via matplotlib
+importlib-resources==5.10.2
+    # via matplotlib
 joblib==1.2.0
     # via scikit-learn
+kiwisolver==1.4.4
+    # via matplotlib
+matplotlib==3.7.0
+    # via -r requirements_dev.in
 numpy==1.24.2
     # via
     #   -r requirements_dev.in
+    #   contourpy
+    #   matplotlib
+    #   pandas
     #   scikit-learn
     #   scipy
+packaging==23.0
+    # via matplotlib
+pandas==1.5.3
+    # via -r requirements_dev.in
+pillow==9.4.0
+    # via matplotlib
+pyparsing==3.0.9
+    # via matplotlib
+python-dateutil==2.8.2
+    # via
+    #   matplotlib
+    #   pandas
+pytz==2022.7.1
+    # via pandas
 scikit-learn==1.2.1
     # via -r requirements_dev.in
 scipy==1.10.0
     # via scikit-learn
+six==1.16.0
+    # via python-dateutil
 threadpoolctl==3.1.0
     # via scikit-learn
+zipp==3.13.0
+    # via importlib-resources
